--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,17 @@ group = 'com.challenger'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.challenger.ChallengerApplication'
+		)
+	}
+	from {
+		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+	}
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
