--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url = ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/postgres}
-spring.datasource.username = ${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password = ${SPRING_DATASOURCE_PASSWORD:password}
-spring.jpa.hibernate.ddl-auto = ${SPRING_JPA_HIBERNATE_DDL_AUTO:create}
-spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
